Language Preference restricts inputs of different languages #82459

Closed
opened 2020-11-06 12:14:24 +01:00 by 炎臻 · 13 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-06 00:11, hash: c99c02d3ba
Worked: (newest version of Blender that worked as expected)


Short description of error:

Language Preference restricts inputs of different languages.

For example,if Language preference is set to English , Spanish or Korean ,it will not be able to input Chinese , Japanese and Korean. Once the setting is switched to Chinese or Japanese ,they three will all be allowed to input.

Despite of the setting,it is possible to paste in any of them from the clipboard.

This problem is also mentioned in #80532.


Exact steps for others to reproduce the error:

{icon fa-plus} OS Conditon: WIN 10 |Blender: 2.92.0 Alpha

  • To instal another input language on WIN 10,open Settings from start menu:
{F9216543}
  • Select Time & Language:
{F9216559}
  • Then select Language row on the left side of the panel.Here in the Preferred languages,click on the "plus" button to add a language:
{F9216732}
  • In the search bar search "japanese"/"korean",these two have only one result and for "chinese"'s results I'm using Simplified,China.After installing you should have a similar language list as below:
{F9216816}
  • For changing the input language you are using:Seclet the language in the pop-over panel that shows up after clicking the "ENG" icon at the right-bottom corner of the screen:
{F9217197}
There will be two clickable button once one language is selected:
{F9217202}
If the left one is displayed as "`英/A/A`“,that means the input will still be interpreted as English.By clicking,the icon will change to "`中/あ/가`” then the input will be interpreted as the respective language.
{icon thumbs-o-up spin} Now you can input a foreign language.Press {key enter} to comfirm,new a text document and try some:
    Chinese:  {nav yuzhou > 宇宙 > universe}    Korean:  {nav dmsgk > 은하 > galaxy}    Japanese:  {nav kawaii > かわいい > cute}
{F9217393}
  • Then in Blender,with Language preference set to English/Korean and default scene,this BUG can be reproduced by renaming the default cube,the input will still be interpreted as English even if another language is selected,so as other text field in Blender.
{F9217624}{F9217556}
Below is what it looks like if the `Language preference` is set to `Japanese`,this should be correct without the BUG in T80532:
{F9217578}
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-06 00:11, hash: `c99c02d3ba` Worked: (newest version of Blender that worked as expected) --- ## Short description of error: Language Preference restricts inputs of different languages. For example,if __Language preference__ is set to __English__ , __Spanish__ or __Korean__ ,it will not be able to input __Chinese__ , __Japanese__ and __Korean__. Once the setting is switched to __Chinese__ or __Japanese__ ,they three will all be allowed to input. *Despite of the setting,it is possible to paste in any of them from the clipboard.* This problem is also mentioned in #80532. --- ## Exact steps for others to reproduce the error: {icon fa-plus} OS Conditon: **WIN 10** |Blender: **2.92.0 Alpha** - To instal another input language on WIN 10,open `Settings` from start menu: ``` {F9216543} ``` - Select `Time & Language`: ``` {F9216559} ``` - Then select `Language` row on the left side of the panel.Here in the `Preferred languages`,click on the "plus" button to add a language: ``` {F9216732} ``` - In the search bar search "`japanese`"/"`korean`",these two have only one result and for "`chinese`"'s results I'm using `Simplified,China`.After installing you should have a similar language list as below: ``` {F9216816} ``` - For changing the input language you are using:Seclet the language in the pop-over panel that shows up after clicking the "ENG" icon at the right-bottom corner of the screen: ``` {F9217197} There will be two clickable button once one language is selected: {F9217202} If the left one is displayed as "`英/A/A`“,that means the input will still be interpreted as English.By clicking,the icon will change to "`中/あ/가`” then the input will be interpreted as the respective language. ``` ``` {icon thumbs-o-up spin} Now you can input a foreign language.Press {key enter} to comfirm,new a text document and try some: ``` ``` Chinese: {nav yuzhou > 宇宙 > universe} Korean: {nav dmsgk > 은하 > galaxy} Japanese: {nav kawaii > かわいい > cute} {F9217393} ``` - Then in Blender,with `Language preference` set to `English/Korean` and default scene,this BUG can be reproduced by renaming the default cube,the input will still be interpreted as English even if another language is selected,so as other text field in Blender. ``` {F9217624}{F9217556} Below is what it looks like if the `Language preference` is set to `Japanese`,this should be correct without the BUG in T80532: {F9217578}
Author

Added subscriber: @PrettyFireNOI7

Added subscriber: @PrettyFireNOI7
炎臻 changed title from Language Preference restricts inputs of different languages. to Language Preference restricts inputs of different languages 2020-11-06 12:16:36 +01:00

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm this, though along with #80532 this would be probably feature request, but I will let UI team to decide on this.

I can confirm this, though along with #80532 this would be probably feature request, but I will let UI team to decide on this.

Added subscriber: @2046411367

Added subscriber: @2046411367
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Unfortunately IME support is still rather limited and needs work, mostly on the coding side but also design wise. Help from the community is welcome here (most of it was already done by the community).
Tagging as known issue. AFAIK this behaves as intended but could be improved.

Unfortunately IME support is still rather limited and needs work, mostly on the coding side but also design wise. Help from the community is welcome here (most of it was already done by the community). Tagging as known issue. AFAIK this behaves as intended but could be improved.
Member

Added subscriber: @Harley

Added subscriber: @Harley
Member

Although we have plenty of problems with IME, this particular issue can be fixed with a one-liner.

In a nutshell, setting the language in Preferences only selects the OUTPUT language used for formatting display strings.

On Windows we already properly get the input language from the OS, and properly change the input language when you change it on the taskbar (by dealing with the WM_INPUTLANGCHANGE message). This means no matter what language you select inside Blender, if your tasktray says the keyboard language is Chinese it is properly treated that way inside Blender. It is just that the IME is not allowed to launch. So you are in Chinese but can only enter English characters.

There was a reason for this that made sense until fairly recently. the comment for blt_lang_check_ime_supported says:

/**
 * Test if the translation context allows IME input - used to
 * avoid weird character drawing if IME inputs non-ascii chars.
 */

This is because we used to only swap in the larger international font for these languages, but used a smaller font for all other languages. Therefore if you switched input language you were likely to see little "tofu" squares rather than proper glyphs. But we changed that last year and we always use the multi-language font regardless of language selected. So we can now just have blt_lang_check_ime_supported() return true (if WITH_INPUT_IME) and you can enter Chinese while displaying blender in Spanish.

Although we have plenty of problems with IME, this particular issue can be fixed with a one-liner. In a nutshell, setting the language in Preferences only selects the OUTPUT language used for formatting display strings. On Windows we already properly get the input language from the OS, and properly change the input language when you change it on the taskbar (by dealing with the WM_INPUTLANGCHANGE message). This means no matter what language you select inside Blender, if your tasktray says the keyboard language is Chinese it is properly treated that way inside Blender. It is just that the IME is not allowed to launch. So you are in Chinese but can only enter English characters. There was a reason for this that made sense until fairly recently. the comment for blt_lang_check_ime_supported says: ``` /** * Test if the translation context allows IME input - used to * avoid weird character drawing if IME inputs non-ascii chars. */ ``` This is because we used to only swap in the larger international font for these languages, but used a smaller font for all other languages. Therefore if you switched input language you were likely to see little "tofu" squares rather than proper glyphs. But we changed that last year and we always use the multi-language font regardless of language selected. So we can now just have blt_lang_check_ime_supported() return true (if WITH_INPUT_IME) and you can enter Chinese while displaying blender in Spanish.

This issue was referenced by f2781e1c7c

This issue was referenced by f2781e1c7c82294c0dbf5d31160313c95ff4ad94
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2021-02-02 20:19:08 +01:00
Member

Closing, since it was not automatically done. The commit could be titled "Fix T12345:" which automatically closes the report.

Closing, since it was not automatically done. The commit could be titled "Fix T12345:" which automatically closes the report.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82459
No description provided.